--- a/photo.html
+++ b/photo.html
@@ -18,7 +18,7 @@
   <body>
     <h1>🥐 A picture of a croissant</h1>
     <img
-      src="/images/download.jpg"
+      src="/images/croissant.jpg"
       alt="Homemade croissant"
       class="croissant-photo"
     />
